minor style fixes

--- a/web/template/rduda.html
+++ b/web/template/rduda.html
@@ -141,12 +141,16 @@
 
         <section>
             <span class="section-heading">Personal Profile</span>
-            <p class="section-content" data-id="personal.profile">&lt; personal profile &gt;</p>
+            <div class="section-content">
+                <p  data-id="personal.profile">&lt; personal profile &gt;</p>
+            </div>
         </section>
 
         <section>
             <span class="section-heading">Work Experience</span>
-            <p class="section-content" data-id="work.experience">&lt; work experience &gt;</p>
+            <div class="section-content">
+                <p data-id="work.experience">&lt; work experience &gt;</p>
+            </div>
         </section>
 
         <section>
